[package]
name = "stab"
version = "0.2.0"
authors = ["ys928 <it_yushi@163.com>"]
edition = "2021"
description = "a simple CLI tool for making tunnels to localhost"
keywords = ["network", "cli", "tunnel", "tcp"]
categories = [
    "network-programming",
    "web-programming",
    "command-line-utilities",
]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/ys928/stab"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
log4rs = "1.3.0"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
clap = { version = "4.0", features = ["derive"] }
anstyle = "1.0.6"
sha2 = "0.10.8"
axum = "0.7.5"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"